update /hello command

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,7 @@
 [TELEGRAM]
 ACCESS_TOKEN = 5149998843:AAEDobu7MsoGcovYfZfplmDC4LxbaqW6iZ4
+
+[REDIS]
+HOST = redis-15437.c1.asia-northeast1-1.gce.cloud.redislabs.com
+PASSWORD = QRZrXZzHbJZHAeN5Qg5HwAlmcn3BssBB
+REDISPORT = 15437
