update the workflow

--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -1,17 +1,17 @@
-name: my-actions  				# the name of this work flow
-on: [push]  
-# Specify the event that automatically triggers the workflow file. This example uses the push event, so that the jobs run every time someone pushes a change to the repository
-
-jobs:  								# gather all the jobs that run in the workflow
-  my-helloworld-job:
-    runs-on: ubuntu-latest   		# Set the type of machine to run on
+name: Deploy
+on:
+  push:
+    branches:
+      - master
+jobs:
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2   # Step 1: Checks out a copy of your repository on the ubuntu-latest machine
-
-      - name: Say Hello World       # Step 2: Type the word 'Hello World'
-        run: echo 'Hello World'  	
-        
-      - name: View a file           # Step 3: Two sub-steps involved
-        run: |
-           echo 'Viewing the file: '   
-           cat requirements.txt 
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Deploy
+        env:
+          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+          HEROKU_APP_NAME: "comp7940zzm"  # Rename this to the app of your Heroku app.
+        run: git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master  
