--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -15,3 +15,9 @@ jobs:
           HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
           HEROKU_APP_NAME: "comp7940zzm"  # Rename this to the app of your Heroku app.
         run: git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git main  
+        
+        
+      - name: Python Safety Check
+        uses: aufdenpunkt/python-safety-check@v1.0.5
+        
+
